exports[`ReducerStoragUnitPanel LOAD: fail action 1`] = `
Object {
  "error": [Error: LOAD has some error.],
  "loaded": false,
  "loading": false
}
`;

exports[`ReducerStoragUnitPanel LOAD: initial action 1`] = `
Object {
  "loading": true
}
`;

exports[`ReducerStoragUnitPanel LOAD: no action 1`] = `Object {}`;

exports[`ReducerStoragUnitPanel creates LOAD_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/LOAD"
  },
  Object {
    "result": Object {
      "environmentRequirement": Object {
        "comment": "fdsfd"
      },
      "groupRead": "foo",
      "id": 3,
      "isPartOf": 2,
      "name": "Forskningens hus",
      "path": ",1,2,3,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        },
        Object {
          "name": "Forskningens hus",
          "nodeId": 3
        }
      ],
      "type": "Building",
      "updatedBy": 666,
      "updatedDate": "2016-10-24T15:41:35+00:00"
    },
    "type": "musit/storageunit-container/LOAD_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel insert INSERT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/INSERT"
  },
  Object {
    "result": Object {
      "environmentAssessment": Object {},
      "environmentRequirement": Object {},
      "groupRead": "foo",
      "id": 2,
      "isPartOf": 1,
      "name": "p5",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "securityAssessment": Object {},
      "type": "Room",
      "updatedBy": 123,
      "updatedDate": "2016-10-24T16:13:24+00:00"
    },
    "type": "musit/storageunit-container/INSERT_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel insert: fail action 1`] = `
Object {
  "data": [Error: Some error in insert.],
  "loaded": false,
  "loading": false
}
`;

exports[`ReducerStoragUnitPanel insert: initial action 1`] = `
Object {
  "loading": true
}
`;

exports[`ReducerStoragUnitPanel insert: no action 1`] = `Object {}`;

exports[`ReducerStoragUnitPanel update INSERT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/INSERT"
  },
  Object {
    "result": Object {
      "environmentAssessment": Object {},
      "environmentRequirement": Object {},
      "groupRead": "foo",
      "id": 2,
      "isPartOf": 1,
      "name": "p5",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "securityAssessment": Object {},
      "type": "Room",
      "updatedBy": 123,
      "updatedDate": "2016-10-24T16:13:24+00:00"
    },
    "type": "musit/storageunit-container/INSERT_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel update: fail action 1`] = `
Object {
  "data": [Error: Some error in update.],
  "loaded": false,
  "loading": false
}
`;

exports[`ReducerStoragUnitPanel update: initial action 1`] = `
Object {
  "loading": true
}
`;

exports[`ReducerStoragUnitPanel update: no action 1`] = `Object {}`;
